--- a/nodejs-app/Jenkinsfile.template
+++ b/nodejs-app/Jenkinsfile.template
@@ -19,6 +19,11 @@ pipeline {
           sh 'node --version'
         }
       }
+      post {
+        success {
+          stash name: 'app', includes: '*.js, public/**, views/*, Dockerfile'
+        }
+      }
     }
     stage('Build and Push Image') {
       when {
@@ -27,6 +32,7 @@ pipeline {
       }
       steps {
          echo "TODO - build and push image"
+         unstash 'app'
       }
       post {
         success {
@@ -38,13 +44,6 @@ pipeline {
       when {
         beforeAgent true
         branch 'master'
-      }
-      options {
-        timeout(time: 60, unit: 'SECONDS') 
-      }
-      input {
-        message "Should we deploy?"
-        submitterParameter "APPROVER"
       }
       steps {
         echo "Continuing with deployment - approved by ${APPROVER}"
