--- a/nodejs-app/Jenkinsfile.template
+++ b/nodejs-app/Jenkinsfile.template
@@ -63,9 +63,12 @@ spec:
         beforeAgent true
         branch 'master'
       }
+      input {
+        message "Should we deploy?"
+        submitterParameter "APPROVER"
+      }
       steps {
         echo "Continuing with deployment - approved by ${APPROVER}"
-      }
     }   
   }
 }
